most appendix captions done

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -9,7 +9,7 @@ In order to understand the effect of phosphorylation at Y11, we took two approac
 
 \section{NMR}
 
-NMR experiments were done by collaborators in the Department of Chemistry at McGill on the WT and YD forms of the \gct. Through protein NMR spectroscopy we are able to obtain accurate \vitro measurements of the structural and dynamic properties of polypeptides. Among these are secondary structure state, dynamic conformational changes, and structural properties such as diffusion rates. Given that the \gct is intrinsically disordered and therefore highly dynamic, this makes NMR a particularly well suited to this problem. Diffusion measurements show that the major conformation of both forms corresponds to that of a collapsed polypeptide. By computing the effective hydrodynamic radius of the polypeptides using the Stokes-Einstein ~\ref{eq:stokes} we can compare the compactness of the \gct to other known structures. The for WT we obtain \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}, $r = \SI{14.2}{\angstrom} \pm 0.2$ and \diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}, $r = \SI{15.6}{\angstrom} \pm 0.2$ for the YD mutant. Both are close to the hydrodynamic radius of the folded fibronectin binding protein D3 ($r = \SI{14.9}{\angstrom}$) ~\cite{wilkins1999hydrodynamic} and well under the predicted Stokes radius of an extended 39 amino acid chain \todo{ref nmr fig}. This is a surprising finding given the high content of negatively charged residues (15 of 39 residues) in both forms would be expected to promote open conformations. However, because that the \gct also has a relatively high number of hydrophobic residues (14/39), it is likely that there are other forces, such as the hydrophobic effect, acting on the packing of the peptide. We also note that the YD has a slightly higher Stokes radius than the YD suggesting some shifts in conformational sampling that are absent in the WT. Chemical shift secondary structure predictions show that both forms occupy a disordered random coil state and do not show evidence of adopting any secondary structure domains. Therefore, we do not observe any disorder-order transitions which are common in functionally-coupled phosphorylated IDPs. However, relaxation-dispersion experiments, which detect changes in the chemical environment of residues on the micro-millisecond timescale, show that the Y11D mutant undergoes large coordinated transitions between two states, while the WT dispersion profile is flat. The two states explored by the mutant are calculated to exchange between a major state populated to 97.5 \% and a minor state populated to 2.5\% with an exchange rate of \SI{2252}{\sec^{-1}}. Combining the dispersions brought about by the YD mutation with the shift in global \diffusion to more open conformations, we hypothesize that the YD mutation induces collective motions between a collapsed major state and an extended minor state. 
+NMR experiments were done by collaborators in the Department of Chemistry at McGill on the WT and YD forms of the \gct. Through protein NMR spectroscopy we are able to obtain accurate \vitro measurements of the structural and dynamic properties of polypeptides. Among these are secondary structure state, dynamic conformational changes, and structural properties such as diffusion rates. Given that the \gct is intrinsically disordered and therefore highly dynamic, this makes NMR a particularly well suited to this problem. Diffusion measurements show that the major conformation of both forms corresponds to that of a collapsed polypeptide. By computing the effective hydrodynamic radius of the polypeptides using the Stokes-Einstein ~\ref{eq:stokes} we can compare the compactness of the \gct to other known structures. The for WT we obtain \diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}, $r = \SI{14.2}{\angstrom} \pm 0.2$ and \diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}, $r = \SI{15.6}{\angstrom} \pm 0.2$ for the YD mutant. Both are close to the hydrodynamic radius of the folded fibronectin binding protein D3 ($r = \SI{14.9}{\angstrom}$) ~\cite{wilkins1999hydrodynamic} and well under the predicted Stokes radius of an extended 39 amino acid chain \todo{ref nmr fig}. This is a surprising finding given the high content of negatively charged residues (15 of 39 residues) in both forms would be expected to promote open conformations. However, because that the \gct also has a relatively high number of hydrophobic residues (14/39), it is likely that there are other forces, such as the hydrophobic effect, acting on the packing of the peptide. We also note that the YD has a slightly higher Stokes radius than the YD suggesting some shifts in conformational sampling that are absent in the WT. Chemical shift secondary structure predictions show that both forms occupy a disordered random coil state and do not show evidence of adopting any secondary structure domains \todo{ref appendix}. Therefore, we do not observe any disorder-order transitions which are common in functionally-coupled phosphorylated IDPs. However, relaxation-dispersion experiments, which detect changes in the chemical environment of residues on the micro-millisecond timescale, show that the Y11D mutant undergoes large coordinated transitions between two states, while the WT dispersion profile is flat. The two states explored by the mutant are calculated to exchange between a major state populated to 97.5 \% and a minor state populated to 2.5\% with an exchange rate of \SI{2252}{\sec^{-1}}. Combining the dispersions brought about by the YD mutation with the shift in global \diffusion to more open conformations, we hypothesize that the YD mutation induces collective motions between a collapsed major state and an extended minor state. 
 
 In this work we use MD simulations of both \gct forms to gain further insight into the transition hypothesized by NMR.  
 
@@ -40,7 +40,6 @@ The first question we addressed was whether the structures in our MD trajectorie
 Although we do not observe ordered secondary structure rearrangements by looking at \texttt{dssp}, we compute RMSD to ask whether the simulations produce any conformational changes in the disordered ensemble. RMSD quantifies the distance between superimposed structures and is therefore a useful tool for detecting the presence of conformational changes in a trajectory. We therefore computed backbone RMSD values for every frame in the simulation with respect to the starting structure. Since the starting conformation is not derived from experimental data and is not expected to correspond to a native state, we also compute RMSD with a 10ns sliding window where every frame is compared with the one 10ns before. In the middle portion of the YD simulation, both methods of computing RMSD contain sharp peaks which indicate the presence of large scale backbone rearrangements \figref{fig:rmsd}. In contrast, WT RMSD values remain stable throughout the simulation. This suggests that the YD mutation can modulate conformational exploration and the stability of the \gct. 
 
 
-\todo{RMSD figs}
 \begin{figure}
 	\centering     %%% not \center
 	\subfigure[RMSD to initial frame]{\label{fig:rmsdinitial}\includegraphics[width=0.49\textwidth]{rmsd}}
@@ -119,7 +118,7 @@ We performed covariance analysis, also known as Principal Component Analysis on 
 \end{figure}
 
 
-We therefore focus our attention on the two first major modes of motion. \todo{time plot of projections in major components}. \figref{fig:pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions consistent with the low dispersions found in NMR, and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. 
+We therefore focus our attention on the two first major modes of motion. \figref{fig:pca} shows a 2 dimensional projection onto the first two eigenvalues of WT and YD trajectories. Each point represents a 3D conformation in the \SI{2}{\us} simulation projected along the first two eigenvectors. The WT projection shows a conformational space that is closely clustered, indicative of constrained motions consistent with the low dispersions found in NMR, and the single state behaviour suggested by RMSD and \diffusion analysis. However, the YD appears to be exploring  multiple conformation clusters which is in agreement with the presence of high dispersion groups found in NMR. Furthermore, by coloring each conformation with a normalized \diffusion value we are able to show that correlated motions along the major modes correspond with transitions between collapsed and extended states. 
 
 \begin{figure}
 	\thispagestyle{empty}
@@ -174,13 +173,13 @@ Through NMR measurements and MD computer simulations, we demonstrate the first e
 
 Both NMR and MD are in strong agreement that the conformational sampling of the \gct lies entirely within the diordered ensemble, as no signal of secondary structure was detected by either method. Diffusion measurements show that the major conformational state of the \gct in the WT and in the YD is collapsed, with the YD having a slightly larger hydrodynamic radius on average. However, NMR and MD simulations both provide evidence that a single point mutation to a negatively charged residue Y>D produces concerted motions along the entire polypeptide that are not present in the WT \gct. Analysis of the collective motions detected in MDS by PCA correspond closely to transitions between collapsed and extended states which leads us to hypothesize that the changes in chemical environment detected in MDS and difference in hydrodynamic radius is a product of an correlated opening and closing motion brought about by the Y>D mutation. This coordinated opening is likely brought about by the effects of electrostatic repulsion as the Asp substituion introduces further negative charge in an already acidic region. It has been previously shown that charge has a strong influence on the conformational ensemble and diffusion rates in IDPs \cite{mao2010net}. Once the \gct enters the open state, several hydrophobic residues in the middle of the polypeptide(L464, A466, G468) become accessible for protein-protein interactions.
 
- Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model such behaviour as a two well potential system \figref{fig:wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the folding-on-binding paradigm ~\cite{tompa2012intrinsically}. Furthermore, this model stands in contrast to the existing view of disordered ensembles as uniform \figref{fig:wellsa} spaces of random coils ~\cite{mittag2007atomic}. And instead, we observe that the disordered landscape has some structure that IDPs can selectively explore  through PTMs to modulate functionality by giving rise to switch-like behaviour while still remaining disordered. Such behaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore be host to coordinated and functional transitions.
+ Because both WT and YD appear to have the same collapsed native state and differ only when the YD undergoes transient excursion to an extended state, we can model such behaviour as a two well potential system \figref{fig:wellsb}. The equilibrium between extended and collapsed conformations is shifted by phosphorylation to render extensions more accessible in the YD.  Previously, such dynamics were only observed in the well characterized order-to disorder transitions, or the folding-on-binding paradigm ~\cite{tompa2012intrinsically}. Furthermore, this model stands in contrast to the existing view of disordered ensembles as uniform \figref{fig:wellsa} spaces of random coils ~\cite{mittag2007atomic}. And instead, we observe that the disordered landscape has some structure that IDPs can selectively explore  through PTMs to modulate functionality by giving rise to switch-like behaviour while still remaining disordered. Such behaviour likely presents advantages to the cell through its ability to provide high specificity and low affinity binding at a low entropic cost. This suggests for the first time that the disordered conformational landscape can be organized and can therefore play host to coordinated and functional transitions.
 
 \begin{figure}
 \centering     %%% not \center
-\subfigure[Figure A]{\label{fig:wellsa}\includegraphics[width=0.45\textwidth]{wells_a}}
-\subfigure[Figure B]{\label{fig:wellsb}\includegraphics[width=0.49\textwidth]{wells_b}}
-\FigureCaption{IDP Conformational Landscapes}{Text}
+\subfigure[Unstructured Landscape]{\label{fig:wellsa}\includegraphics[width=0.45\textwidth]{wells_a}}
+\subfigure[Structured Landscape]{\label{fig:wellsb}\includegraphics[width=0.49\textwidth]{wells_b}}
+\FigureCaption{IDP Conformational Landscapes}{\figref{fig:wellsa} shows an energy landscape as a function of radius of gyration (black to red) where a modification in the IDP would lead to a uniform conformational shift towards uniformly less compact structures centered around a single energy minimum. \figref{fig:wellsb} illustrates the behaviour observed in the \gct, where the energy landscape appears to have a two-well structure. This landscape, when combined with phosphorylation, renders a minor state accessible allowing for switch-like behaviour in the disordered ensemble.}
 \label{fig:wells}
 \end{figure}
 
