--- a/introduction.tex
+++ b/introduction.tex
@@ -7,8 +7,6 @@
 Molecular  machines  are  assemblies of proteins and associated molecules that  work together  in a coordinated manner  to solve a biological problem.  These biological problems, such as coordinating chromosome segregation  during cell division, regulation of cell cycle timing, execution of protein  synthesis, etc.  encompass many processes essential to life. Given the necessity for survival in the face of ever changing environments,  evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust  manner.  A biological machine that  only functions properly under a narrow range of  conditions is less likely to support the life of a single individual or a population.  Therefore,  at the core of each of those processes are highly complex networks of proteins that  are able to assemble, communicate, coordinate,  self-regulate and self-correct in order to accomplish the necessary task reliably.  For example, the vital process of DNA replication is executed by a large multitude of proteins that  each contribute to the process of copying the genome ~\cite{bell2002dna}. The replication  machinery must read environmental  cues for initiating  replication  at the correct time, meanwhile complex combinatoric  signaling networks ensure that  DNA replication  unfolds in a processive manner,  enzymatic components  perform physical work by unwinding the DNA strand  for copying, and others  communicate  with theDNA repair machinery  to correct copying errors and avoid harmful mutations. It is clear that  solving this biological problem requires the ability of participating proteins to interact  with many different partners  and mediate  many different processes.
 
 
-%here
-
 The structure and function of each protein is encoded in its unique sequence, or chain, of amino acids. Physical interactions between amino acids give rise to a 3D arrangement of the protein chain, also known as structure. Each protein’s structure allows for specific interactions between  proteins  to  assemble molecular machines, recruit  necessary factors and mediate chemical reactions. See \figref{fig:tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved ~\cite{kendrew1958three}, we have learned a great deal about how 3D architecture and conformational sampling of the chains give rise to protein function. X-ray crystallography accesses atomic-scale conformations of folded protein  domains, allowing us to infer that  coordinated  motions between structural conformations is the main element of control in protein function ~\cite{hegyi1999relationship}. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca+ ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. Yet, as we saw with DNA replication, molecular processes are incredibly complex. 
 
 A single protein is often required to fulfill many functions, interact with various different partners and be able to do so on very fast timescales. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
@@ -16,7 +14,7 @@ A single protein is often required to fulfill many functions, interact with vari
 \begin{figure}[h!]
 \centering
 \includegraphics[height=0.4\textheight]{tub4}
-\FigureCaption{$\gamma$-Tubulin 3D Structure}{Visual representation of the yeast $\gamma$-Tubulin protein based on the human $\gamma$-Tubulin structure derived from X-ray crystallography~\cite{aldaz2005insights}. The protein is composed of a highly ordered globular domain stabilized by various $\alpha$-helices and $\beta$-sheet domains and measures \SI{2.20}{\nm} in radius of gyration. In red, we see the disordered \gct region which was absent in the crystal structure and was modeled by \texttt{RaptorX}.}
+\FigureCaption{$\gamma$-Tubulin 3D Structure}{Visual representation of the yeast $\gamma$-Tubulin protein based on the human $\gamma$-Tubulin structure derived from X-ray crystallography~\cite{aldaz2005insights}. The protein is composed of a highly ordered globular domain stabilized by various $\alpha$-helices and $\beta$-sheet domains and measures \SI{2.20}{\nm} in radius of gyration. In red, we see the disordered \gct region which was absent in the crystal structure and was modeled by \texttt{RaptorX} ~\cite{kallberg2012template}.}
 \label{fig:tub4}
 \end{figure}
 
