--- a/methods.tex
+++ b/methods.tex
@@ -71,7 +71,7 @@ E_{nonbonded} = \sum_{i>j} f_{ij} \left(
 
 Where $A$ and $C$ represent combining rules which allow us to obtain the interaction energy of dissimilar non-bonded atoms. OPLS uses standard combining rules where $A_ij = \sqrt{A_{ii}A_{jj}}$ and $C_{ij} = \sqrt{C_{ii}C_{jj}}$ ~\cite{good1970new}.
 
-We believe the OPLS-AA force field is be best fit for modeling charge-dependent motions of the \gct. Whereas other popular force fields such as CHARMM were parametrized on X-ray crystallographic experimental values of folded globular proteins, the OPLS force field was optimized with quantum chemical calculations of charged short peptides ~\cite{kukol2008molecular}. This approach is likely to more accurately model the dynamics of unfolded peptides where other force fields may tend to favour the formation of collapsed stable secondary structure motifs ~\cite{henriques2015molecular, tran2008role}. Furthermore, it has been reported that the small and localized treatment of charged groups in OPLS-AA is well suited for systems where local charge interactions drive global dynamics ~\cite{vitalis2009absinth}. We show that a simulation under OPLS-AA is able to accurately produce an extended conformation for the \lq molecular ruler \rq polyproline \figref{fig:pp}. We also control the appropriateness of the force field by comparing MD values to NMR measurements on the same system.
+We believe the OPLS-AA force field is be best fit for modeling charge-dependent motions of the \gct. Whereas other popular force fields such as CHARMM were parametrized on X-ray crystallographic experimental values of folded globular proteins, the OPLS force field was optimized with quantum chemical calculations of charged short peptides ~\cite{kukol2008molecular}. This approach is likely to more accurately model the dynamics of unfolded peptides where other force fields may tend to favour the formation of collapsed stable secondary structure motifs ~\cite{henriques2015molecular, tran2008role}. Furthermore, it has been reported that the small and localized treatment of charged groups in OPLS-AA is well suited for systems where local charge interactions drive global dynamics ~\cite{vitalis2009absinth}. We show that a simulation under OPLS-AA is able to accurately produce an extended conformation for the \lq molecular ruler \rq polyproline ~\cite{schuler2005polyproline} \figref{fig:pp}. We also control the appropriateness of the force field by comparing MD values to NMR measurements on the same system.
 
 
 
@@ -81,7 +81,7 @@ The starting point of an MD simulation is a force field and a set of initial coo
 
 Hydrogen bonding and the hydrophobic effect play very important roles in shaping the dynamics of polypeptides therefore, the model must include water molecules. We place the peptide atoms in a simulated box under periodic boundary conditions where water molecules are introduced to fill the remaining space. All subsequent force calculations in MD will consider solvent-solvent and solvent-peptide atomic interactions. We use an explicit water regime, meaning that all solvent atoms are modeled as discrete units in the system. While faster alternatives to this paradigm which represent the solvent with mean field behaviour, known as implicit solvent are available, it is well documented that an explicit treatment currently provides results with the highest accuracy ~\cite{onufriev2008implicit, arnold1994evaluation, zhou2003free}. 
 
-Once the peptide is solvated any initial steric clashes between atoms must be allowed to relax. Typically this involves executing an energy minimization algorithm which searches for atomic coordinates that minimizes the forces between atoms to move the system towards an energy minimum. No minimization algorithm guarantees convergence to a global minimum in finite time on a realistic system. However, convergence to a local minimum is often sufficient to eliminate significant clashes. 
+Once the peptide is solvated any initial steric clashes between atoms must be allowed to relax. Typically this involves executing an energy minimization algorithm which searches for atomic coordinates that minimizes the forces between atoms to move the system towards an energy minimum. No minimization algorithm guarantees convergence to a global minimum in finite time on a realistic system. However, convergence to a local minimum is often sufficient to eliminate significant clashes. In this work, we use the robust steepest descent energy minimization algorithm implemented in GROMACS ~\cite{hess2008gromacs}. 
 
 At this point, we could begin an MD simulation and obtain trajectories in the NVE ensemble (constant number of particles, volume, and energy). However, we are often interested in comparing results from MD to experimental measurements such as those from NMR where the system is under constant temperature and pressure. It is therefore necessary to ensure that the forces in the system don't produce large fluctuations in the pressure and temperature of the ensemble. In order to keep the temperature constant and achieve an NVT (constant number of particles, volume, and temperature) we use a thermostat. Since the temperature of a system is a function of the kinetic energy, a thermostat re-scales the velocities of the atoms in the system to achieve a given temperature. Likewise, for maintaining constant pressure, a barostat adjusts the size of the box to counteract fluctuations in pressure and thus achieving an NPT ensemble (constant number of particles, pressure, and temperature). During the equilibration step, we first let the system adjust to the desired temperature by executing a short simulation in NVT. Then under NPT we allow the system to adjust to the desired pressure. Once both equilibration simulations are complete, the system is ready for a full simulation in NPT. 
 
