--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -713,3 +713,25 @@
   year={2007},
   publisher={Nature Publishing Group}
 }
+
+@article{boschitsch2002fast,
+  title={Fast boundary element method for the linear Poisson-Boltzmann equation},
+  author={Boschitsch, Alexander H and Fenley, Marcia O and Zhou, Huan-Xiang},
+  journal={The Journal of Physical Chemistry B},
+  volume={106},
+  number={10},
+  pages={2741--2754},
+  year={2002},
+  publisher={ACS Publications}
+}
+
+@article{schuler2005polyproline,
+  title={Polyproline and the “spectroscopic ruler” revisited with single-molecule fluorescence},
+  author={Schuler, Benjamin and Lipman, Everett A and Steinbach, Peter J and Kumke, Michael and Eaton, William A},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={102},
+  number={8},
+  pages={2754--2759},
+  year={2005},
+  publisher={National Acad Sciences}
+}
