english abstract done

--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -15,6 +15,9 @@
 \usepackage{amsmath}
 
 
+
+
+
 \graphicspath{{figures/}}
 %\graphicspath{{figures_lowres/}} 
 
@@ -76,11 +79,13 @@
 
 
 \SetDedicationName{\MakeUppercase{Dedication}}%
-\SetDedicationText{This document is dedicated to the graduate students of the McGill University.}%
+\SetDedicationText{To my grandparents; Hilda Fernandez and Porfirio Oliver. {\it Gracias por su apoyo, amor, y por ser mi inspiraci\'on en todo. Mi \'unica meta en la vida es acercarme un poco a lo que son ustedes. Los quiero mucho.}}%
+
 \Dedication%
 
 \SetAcknowledgeName{\MakeUppercase{Acknowledgements}}%
-\SetAcknowledgeText{Acknowledgments, if included, must be written in complete sentences.  Do not use direct address.  For example, instead of Thanks, Mom and Dad!, you should say I thank my parents. }%
+\SetAcknowledgeText{I give my sincere thanks to my supervisor Dr. Jackie Vogel for her support and mentorship throughout my Master's, and for sharing with me her passion for the complexity of life. I thank my colleagues in the Vogel lab for their friendship, guidance and useful discussions. I would also like to acknowledge the generous financial support from the Cellular Dynamics of Mollecular Complexes fellowship and Dr. Vogel's grants from the	Canadian Institutes for	Health Research and the National Institutes of Health. I thank the Guillimin support team for their invaluable technical help in working with the Calcul Qu\'ebec compute clusters. I also thank Vladimir Reinharz for his help in with computational problems, and for all the enriching discussions.
+	\newline \indent  I would like to express my deepest gratitude to all those whom I am so fortunate to call my friends and loved ones. To my brother, whose friendship means everything. To my father for his care and support. And to my mother; for being there for me every day, in every way despite it all, for being my role model and my best friend.}%
 \Acknowledge%
 
 \SetContributionName{\MakeUppercase{Contribution of Authors}}%
@@ -92,7 +97,8 @@
 %%         English Abstract                        %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractEnName{\MakeUppercase{Abstract}}%
-\SetAbstractEnText{ Abstract in English and French are required. The text of the abstract in English begins here.}
+\SetAbstractEnText{With recent advances in experimental and computational methods in structural biology, it is becoming increasingly clear that protein function is not only dependent on stable architectures, but equally so on the absence of well-ordered domains. These elements, also known as intrinsically disordered proteins (IDPs) or regions (IDRs) are protein chains that do not adopt organized three dimensional structures, but have nonetheless been shown to be highly functional. Instead, due to their flexible backbones, IDPs/IDRs are able to explore a large ensemble of conformations, resulting in an expansion of the functional repertoire of proteins. The cell is able to harness this flexibility by targeting IDRs for post-translational modifications (PTMs) such as phosphorylation. By altering the conformational sampling of IDRs through PTMs, disordered elements serve as a key points for functional control and signal integration. This paradigm is crucial for ensuring the proper execution of complex cellular processes that involve a large number of multi-tasking proteins that need to act in a coordinated manner. However, the physical mechanisms linking IDRs to functional output remain largely unknown. In this work, we study the role of phosphorylation in the assembly of the mitotic spindle which effects chromosome segregation during cell division. Phosphorylation at Tyrosine 11 (Y11) in the intrinsically disordered C-terminus of \tub (\gct) has been shown to control key aspects of the assembly of microtubules in the mitotic spindle and leads to a temperature sensitive growth phenotype in budding yeast. Through Molecular Dynamics computer simulations (MD) and Nuclear Magnetic Resonance spectroscopy (NMR) we show that non-phosphomimicking and phospho-mimicking states of the \gct sample disordered and collapsed conformations. However, the phosphomimicking (Tyrosine 11 to Aspartic Acid) mutant undergoes switch-like collective motions to an extended but also disordered state. We propose that this transition serves to control the binding of proteins involved in shaping microtubule dynamics. This is the first observation of switch-like behaviour in IDRs/IDPs where both states are disordered, making this a novel physical mechanism of control in with the potential to regulate cellular function.}
+
 \AbstractEn%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
