french abstract first draft

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -98,7 +98,7 @@ In order to visualize a non-overlapping subset of conformations to represent ext
 \subfigure[WT]{\label{fig:wt_contacts}\includegraphics[height=0.35\textheight]{wt_contacts}}
 \subfigure[YD]{\label{fig:yd_contacts}\includegraphics[height=0.35\textheight]{yd_contacts}}
 \subfigure[Representative Structures]{\label{fig:representatives}\includegraphics[height=0.35\textheight]{representatives}}
-\FigureCaption{Distribution of diffusion coefficients}{All-to-all residue carbon-α distances in structures with lowest 1\% \diffusion  (upper triangle) and highest 1\% \diffusion (lower triangle). Comparison is shown for WT \figref{fig:wt_contacts} and Y11D \figref{fig:yd_contacts} simulations. Representative structures obtained identifying structures with lowest all-to-all RMSD values for the Y11D low diffusion coefficient group. High dispersion residues with $\Delta$R2 values greater than $5 s^{-1}$ are labeled in red.}
+\FigureCaption{Contact Maps of Extended and Collapsed Ensembles}{All-to-all residue carbon-α distances in structures with lowest 1\% \diffusion  (upper triangle) and highest 1\% \diffusion (lower triangle). Comparison is shown for WT \figref{fig:wt_contacts} and Y11D \figref{fig:yd_contacts} simulations. Representative structures obtained identifying structures with lowest all-to-all RMSD values for the Y11D low diffusion coefficient group. High dispersion residues with $\Delta$R2 values greater than $5 s^{-1}$ are labeled in red.}
 
 \label{fig:contacts}
 \end{figure}
